essai ajout font

--- a/index.html
+++ b/index.html
@@ -57,8 +57,45 @@
                 <button class="btn">full story</button>
             </div>
         </section>
-        
+
     </main>
+
+    <footer>
+        <form action="">
+            <label for="name">name</label>
+            <input type="text" id="name">
+            <label for="email">emain</label>
+            <input type="text" id="email">
+            <label for="message">name</label>
+            <textarea id="message"></textarea>
+            <div class="submit-container">
+                <input type="submit" class="btn" value="send message">
+            </div>
+        </form>
+        <div class="infos-contact">
+            <div>
+                <h3>address</h3>
+                <p><br>124 somewhere Road #87257 <br>Nashville, TN 00000-0000</p>
+            </div>
+            <div>
+                <h3>phone</h3>
+                <p>(000) 000-0000</p>
+            </div>
+            <div>
+                <h3>email</h3>
+                <p>info@untitled.ltd</p>
+            </div>
+            <div class="social">
+                <h3>social</h3>
+                <ul>
+                    <li><i class="fa-brands fa-twitter"></i></li>
+                    <li><i class="fa-brands fa-facebook"></i></li>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                    <li><i class="fa-brands fa-github"></i></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
