--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="section2">
             <div class="left-part">
                 <span>April 24, 2017</span>
-                <h3>sed magna <br>Lorem, ipsum.</h3>
+                <h3>sed magna <br>Lorem, ipsum</h3>
                 <img src="./assets/img/pic02.jpg" alt="Forest">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores, exercitationem?</p>
                 <button class="btn">full story</button>
@@ -64,7 +64,7 @@
         <form action="">
             <label for="name">name</label>
             <input type="text" id="name">
-            <label for="email">emain</label>
+            <label for="email">email</label>
             <input type="text" id="email">
             <label for="message">name</label>
             <textarea id="message"></textarea>
