Footer -> structure formulaire

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     <footer>
         <form action="">
             <label for="name">name</label>
-            <input type="text" id="name">
+            <input type="text" id="name" autocomplete="off">
             <label for="email">email</label>
-            <input type="text" id="email">
+            <input type="text" id="email" autocomplete="off">
             <label for="message">name</label>
             <textarea id="message"></textarea>
             <div class="submit-container">
